Check Mate and new game fully implemented